main/src/styles/tamlishTheme.css
/* ... */
/* User statistics */

#statsGUI{
    display: none;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    height: 300px;
    width: 250px;
    background-color: #EEF2FB;
    border-radius: 15px;
    position: absolute;
    top: 44px;
    right: -6px;
    padding: 4px;
    gap: 12px;
}
#userStatsText{
    display: flex;
    flex-direction: row;
    align-items: center;
    width: fit-content;
    justify-self: flex-start;
    margin-bottom: 20px;
    color: rgb(0, 119, 255);
    font-weight: 600;
    gap: 70px;
    margin-top: 10px;
}
#userStats{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 25px;
    width: 100%;
    color: rgb(0, 110, 255);
}
#signoutBtn{
    margin-top: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 12px;
    height: 40px;
    width: 200px;
    border: none;
    margin-bottom: 12px;
    color: white;
    background-color: rgb(1, 117, 249);
    box-shadow: 3px 3px rgb(48, 145, 255);
    border-radius: 8px;
}
#signoutBtn:active{
    box-shadow: 1px 1px rgb(48, 145, 255);
}
#statsexitBtn{
    display: inline-block;
    cursor: pointer;
}
#wordsGoodLearnt{
    color: green;
}
#wordsNeutralLearnt{
    color: green;
}
#wordsBadLearnt{
    color: red;
}

/* Authentication */

.authpg{
    display: none;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    width: 100vw;
    position: fixed;
    z-index: 4;
    backdrop-filter: blur(11px);
    text-align: center;
}
.authpgUI{
    display: flex;
    flex-direction: column;
    justify-content: flex-start ;
    align-items: center;
    background-color: #EEF2FB;
    height: 550px;
    width: 400px;
    border-radius: 30px;
    text-align: center;
    position: relative;
    gap: 22px;
    padding: 6px;
}
.authpgUI .signText{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 0 25px;
    justify-self: flex-start;
    color: rgb(0, 119, 255);
    font-weight: 600;
    margin-bottom: 30px;
}
.authpg button{
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    padding: 12px;
    background-color: rgb(1, 117, 249);
    box-shadow: 2px 2px rgb(48, 145, 255);
    border-radius: 8px;
    border: none;
    width: fit-content;
    height: fit-content;
}
.authpgUI button:active{
    box-shadow: 1px 1px rgb(48, 145, 255);
}
.authpgUI input{
    width: 300px;
    padding: 12px;
    border-radius: 4px;
    border: 1px solid rgb(0, 119, 255);
    outline: none;
    background-color: rgb(236, 240, 255);
    color: rgb(0, 106, 255);
}
.authpgUI input::placeholder{
    color: rgb(71, 129, 255);
    opacity: 0.6;
}
.authpgUI input:focus{
    box-shadow: 0 0 0 2px rgb(0, 106, 255);
}
.googleLogo{
    height: 30px;
    display: inline-block;
    vertical-align: middle;
    margin-right: 12px;
}
#signupBtn{
    display: inline-block;
    background-color: transparent;
    color: rgb(1, 92, 249);
    font-size: inherit;
    text-decoration: none;
    padding: 0;
    margin-left: 5px;
    box-shadow: none;
}
#signupBtn:hover{
    text-decoration: underline;
}
#noAccountMessage{
    margin-top: 10px;
    color: rgb(19, 110, 255);
}
#haveAccountMessage{
    margin-top: 10px;
    color: rgb(19, 110, 255);
}
#signinBtn{
    display: inline-block;
    background-color: transparent;
    color: rgb(1, 92, 249);
    font-size: inherit;
    text-decoration: none;
    padding: 0;
    margin-left: 5px;
    box-shadow: none;
}
#signinBtn:hover{
    text-decoration: underline;
}
#login{
    width: 80px;
    height: 40px;
    margin-top: 20px;
}
#signUp{
    width: 80px;
    height: 40px;
    margin-top: 20px;
}
.authpgUI h3{
    display: inline-block;
    width: fit-content;
    padding: 12px;
}
.authpgUI label{
    color: rgb(71, 129, 255);
    font-size: 13px;
    width: 300px;
    text-align: left;
    margin-bottom: -20px;
    opacity: 0.8;
}
#signupPgUI #SUexitBtn, #loginPgUI #LIexitBtn, #RPexitBtn{
    position: absolute;
    right: 5px;
    top: 5px;
    padding: 20px;
    transform: scale(1.4);
    cursor: pointer;
}
#errorPage1, #errorPage2{
    font-size: small;
    color: red;
}
#forgotPasswordBtn{
    color: rgb(71, 129, 255);
    font-size: 12px;
    width: 300px;
    text-align: right;
    margin-bottom: -10px;
    margin-top: -18px;
    padding: 0px;
    opacity: 0.8;
    font-weight: 300;
    cursor: pointer;
}
#forgotPasswordBtn:hover{
    color: rgb(10, 68, 194);
}
#resetPasswordpg{
    display: none;
}
#commandPR{
    font-size: 13px;
    color: #0066ff;
}
#confirmationMessage{
    color: #2263e6;
    font-size: 15px;
}

#landingPage{
        background: linear-gradient(to bottom, 
    #0B53FC 0%,     
    #2263e6 30%, 
    #2263e6 50%,
    #689ef4 80%,
    #93bdff 100%
  );
}

/* Banner */

#banner{
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    text-align: start;
    padding-left: 60px;
    gap: 22px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: rgb(33, 85, 255);
    position: relative;
    height: 82vh;
    overflow: hidden;
    cursor: default;
    background-color: #e3ebff;
    background: linear-gradient(180deg, #e8f0fa 0%, #3d87f7 60%, #0850f8 100%);
}
#banner #tamlishQuote{
    z-index: 1;
    font-size: 50px;
    letter-spacing: -0.02em;
    word-spacing: -4px;
    line-height: 1.1;
    color: #0066ff;
    text-shadow: 0 0 40px rgba(156, 180, 243, 0.3);
    width: 52vw;
}
#bannerBar{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    color: #e3ebff;
    height: 9.5vh;
    padding: 20px;
    background-color: #0b53fc;
    overflow: hidden;
    border: 1px solid rgba(255,255,255,0.4);
}
#bannerBar p{
    padding: 22px;
    flex: 1;
    text-align: center;
}
/* ... */

